squashed commits for segment-anything-2-video
