# runner/openapi.yaml
@@ -321,6 +321,53 @@ paths:
       security:
       - HTTPBearer: []
       x-speakeasy-name-override: segmentAnything2
+  /segment-anything-2-video:
+    post:
+      tags:
+      - generate
+      summary: Segment Anything 2 Video
+      description: Segment objects in an video.
+      operationId: genSegmentAnything2Video
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Body_genSegmentAnything2Video'
+        required: true
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/VideoSegmentResponse'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPError'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPError'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPError'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+      security:
+      - HTTPBearer: []
+      x-speakeasy-name-override: segmentAnything2Video
   /llm:
     post:
       tags:
@@ -812,6 +859,65 @@ components:
       required:
       - image
       title: Body_genSegmentAnything2
+    Body_genSegmentAnything2Video:
+      properties:
+        media_file:
+          type: string
+          format: binary
+          title: Media File
+          description: Media file to segment.
+        model_id:
+          type: string
+          title: Model Id
+          description: Hugging Face model ID used for image generation.
+          default: ''
+        point_coords:
+          type: string
+          title: Point Coords
+          description: Nx2 array of point prompts to the model, where each point is
+            in (X,Y) in pixels.
+        point_labels:
+          type: string
+          title: Point Labels
+          description: Labels for the point prompts, where 1 indicates a foreground
+            point and 0 indicates a background point.
+        box:
+          type: string
+          title: Box
+          description: A length 4 array given as a box prompt to the model, in XYXY
+            format.
+        mask_input:
+          type: string
+          title: Mask Input
+          description: A low-resolution mask input to the model, typically from a
+            previous prediction iteration, with the form 1xHxW (H=W=256 for SAM).
+        multimask_output:
+          type: boolean
+          title: Multimask Output
+          description: If true, the model will return three masks for ambiguous input
+            prompts, often producing better masks than a single prediction.
+          default: true
+        return_logits:
+          type: boolean
+          title: Return Logits
+          description: If true, returns un-thresholded mask logits instead of a binary
+            mask.
+          default: true
+        normalize_coords:
+          type: boolean
+          title: Normalize Coords
+          description: If true, the point coordinates will be normalized to the range
+            [0,1], with point_coords expected to be with respect to image dimensions.
+          default: true
+        frame_idx:
+          type: integer
+          title: Frame Idx
+          description: Frame index reference for (required video file input only)
+          default: 0
+      type: object
+      required:
+      - media_file
+      title: Body_genSegmentAnything2Video
     Body_genUpscale:
       properties:
         prompt:
@@ -1165,6 +1271,36 @@ components:
       - frames
       title: VideoResponse
       description: Response model for video generation.
+    VideoSegmentResponse:
+      properties:
+        VideoFrames:
+          items:
+            $ref: '#/components/schemas/VideoSegmentationItem'
+          type: array
+          title: Videoframes
+          description: List of base64-encoded, zlib compressed mask data of all video
+            frames.
+      type: object
+      required:
+      - VideoFrames
+      title: VideoSegmentResponse
+    VideoSegmentationItem:
+      properties:
+        shape:
+          items: {}
+          type: array
+          title: Shape
+          description: The shape of the mask.
+        mask:
+          type: string
+          format: binary
+          title: Mask
+          description: The mask data.
+      type: object
+      required:
+      - shape
+      - mask
+      title: VideoSegmentationItem
   securitySchemes:
     HTTPBearer:
       type: http
